<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/delete_sheet_linear_layout"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/primary_color"
    android:layout_height="wrap_content">

    <View
        android:layout_width="120dp"
        android:layout_height="7dp"
        android:layout_margin="20dp"
        android:background="@drawable/delete_sheet_shape"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_info"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/delete_true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/delete_true"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/yes"/>


    <TextView
        android:id="@+id/delete_false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/delete_false"
        android:padding="15dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/no"/>

</LinearLayout>