<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_dark"
    tools:context=".activity.MainActivity">

    <SearchView
        android:id="@+id/search_view_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:queryHint="@string/search_text"
        android:iconifiedByDefault="false"
        android:searchIcon="@drawable/ic_baseline_search_24"
        android:closeIcon="@drawable/ic_baseline_close_24"
        android:background="@drawable/edit_text"/>

    <LinearLayout
        android:id="@+id/notes_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_view_bar"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/notfound" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/oops"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/not_found"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_view_bar"
        android:layout_marginTop="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/btn_color"
        android:contentDescription="@string/add_notes"
        android:elevation="6dp"
        android:src="@drawable/ic_baseline_add_24"
        app:fabSize="normal"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

</RelativeLayout>