<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:orientation="vertical"
    tools:context=".activity.AddActivity">

    <EditText
        android:id="@+id/notes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/add_title"
        android:padding="15dp"
        android:text=""
        android:textColor="@color/white"
       />

    <EditText
        android:id="@+id/notes_description"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/add_description"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text=""
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notes_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/priority"
            android:textColor="@color/gray"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/high_priority"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/red_dot"
            android:src="@drawable/ic_baseline_check_24" />

        <ImageView
            android:id="@+id/mid_priority"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/yellow_dot" />

        <ImageView
            android:id="@+id/low_priority"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/green_dot" />

    </LinearLayout>

    <Button
        android:id="@+id/add_notes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/add_note_btn"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:iconTint="#000000" />
</LinearLayout>